@@ -5,6 +5,12 @@
 // 	- Details.
 //========================================
 
+03/21/2010
+	r267 [pakpil]
+	* Added max_baby_third_paramater to set max parameter to 3rd baby classes.
+	* Fixed an issue where the cart was being taked off when you are removing your mado.
+	* Minor fix in pc_setoption to prevent 3rd baby class to mount until these can do it.
+
 03/20/2010
 	r268 [Rytech]
 	*Added in the adjusted checks for the V2.0 job system.
